# task_tree_backend

./: README.md  manage.py  pyproject.toml
apps/: admin.py  forms.py  models.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_menu_named_url.py
apps/templatetags/: menu_tag.py
task_tree_backend/: asgi.py  settings.py  wsgi.py
templates/apps/: index.html  menu.html
