[tool.poetry]
name = "task-tree-backend"
version = "0.1.0"
description = ""
authors = ["xolmomin <xolmomin@gmail.com>"]
readme = "README.md"
packages = [{include = "task_tree_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-mptt = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
